# MCPserve

./: .codebase  .dockerignore  .env  .env.example  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-go  LICENSE  PUBLISH_CHECKLIST.md  README.md  README_en.md  SECURITY.md  SMITHERY_BOT_TRIGGER.md  SMITHERY_REVIEW_SUMMARY.md  api_keys.json  auth.py  cache.py  config.py  dashboard.py  docker-compose.yml  docker-compose.yml.backup  go.mod  go.sum  gpt.py  main.go  main.py  main_fastmcp.py  package-lock.json  package.json  package.json.backup  prompt.py  pyproject.toml  run_web.sh  server.js  smithery  smithery.config.js  smithery.yaml  (+5 more)
.github/: copilot-instructions.md
.github/agents/: my-agent.md
.github/workflows/: ci.yml
enhanced-mcp-server/: Dockerfile  Dockerfile.backup  LICENSE  index.js  package.json  pyproject.toml  smithery.yaml
enhanced-mcp-server/enhanced_mcp_server/: __init__.py  main.py
enhanced-mcp-server/enhanced_mcp_server/auth/: __init__.py
enhanced-mcp-server/enhanced_mcp_server/cache/: __init__.py
enhanced-mcp-server/enhanced_mcp_server/config/: __init__.py  settings.py
enhanced-mcp-server/enhanced_mcp_server/core/: server.py
enhanced-mcp-server/enhanced_mcp_server/prompts/: __init__.py
enhanced-mcp-server/enhanced_mcp_server/tools/: __init__.py
enhanced-mcp-server/enhanced_mcp_server/utils/: logging.py
enhanced-mcp-server/enhanced_mcp_server/web/: app.py
enhanced-mcp-server/templates/: fetch.html  index.html  search.html
enhanced-mcp-server/tests/: test_integration.py
enhanced_mcp_server/: main.py
enhanced_mcp_server/auth/: __init__.py
enhanced_mcp_server/cache/: __init__.py
enhanced_mcp_server/config/: settings.py
enhanced_mcp_server/core/: server.py
enhanced_mcp_server/prompts/: __init__.py
enhanced_mcp_server/tools/: __init__.py
enhanced_mcp_server/utils/: logging.py
enhanced_mcp_server/web/: app.py
templates/: fetch.html  index.html  search.html
tests/: test_basic.py  test_integration.py
