[project]
name = "enhanced-mcp-server"
version = "0.3.0"
description = "Servidor MCP avançado com ferramentas de IA, cache inteligente e interface web"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Enhanced MCP Team", email = "team@example.com"}
]
dependencies = [
    "mcp[cli]>=1.4.1",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "requests>=2.31.0",
    "redis>=5.0.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
    "smithery>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

# Points to your server function
[tool.smithery]
server = "enhanced_mcp_server.core.server:create_server"

[tool.setuptools.packages.find]
include = ["enhanced_mcp_server*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"