[project]
name = "enhanced-mcp-server"
version = "0.2.0"
description = "Servidor MCP avançado com ferramentas de IA, cache inteligente e interface web"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Enhanced MCP Team", email = "team@example.com"}
]
dependencies = [
    "mcp[cli]>=1.4.1",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "requests>=2.31.0",
    "openai>=1.77.0",
    "redis>=5.0.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.0"
]

[project.optional-dependencies]
web = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.0",
]
cache = [
    "redis>=5.0.1",
]
all = [
    "enhanced-mcp-server[web,cache]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["enhanced_mcp_server"]